--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  banner:
+    location: classpath:banner.txt
   datasource:
     username: tasks-app
     password: tasks-app
@@ -6,6 +8,5 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     database: postgresql
-    show-sql: true
     hibernate:
       ddl-auto: create
