--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   banner:
-    location: classpath:banner-test.txt
+    location: classpath:banner.txt
   datasource:
     url: jdbc:h2:mem:db
     username: h2
